objects/IntegrationLog__c.object
<CustomObject>
    <description>IntegrationLog holds the configurable API Flow and status.</description>
    <fields>
        <fullName>EndTime__c</fullName>
        <description>Stores the end time for particlar api execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FlowName__c</fullName>
        <description>Stores flow name which may contain a group of apis</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Used to store success or failure message of  a flow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <description>Stores the start time of particular api execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to store success or failure status of a flow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <description>stores submission id for one flow</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Integration Logs</relationshipLabel>
        <relationshipName>IntegrationLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>